syntax = "proto3";

package rest_grpc_graphql.grpc;

option go_package = "pb/";

import "user_message.proto";

// CreateUser
message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string message = 1;
}

// ----------------------------

// FindUser
message FindUserRequest {
    string id = 1;
}

message FindUserResponse {
    string message = 1;
    User user = 2;
}

// ----------------------------

// UpdateUser
message UpdateUserRequest {
    string id = 1;
    User user = 2;
}

message UpdateUserResponse {
    string message = 1;
}

// ----------------------------

// DeleteUser
message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}

// ----------------------------

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
    rpc FindUser(FindUserRequest) returns (FindUserResponse) {};
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
}
